Fixed pop-up view on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -197,6 +197,11 @@ body.dark,
   border: 2px solid #ffffff;
 }
 
+.dark .fa-amazon,
+.dark .fa-apple {
+  color: #ffffff;
+}
+
 .dark .amazonWhite {
   display: block;
 }
@@ -1473,7 +1478,7 @@ img {
   border: 2px solid #202024;
   border-radius: 18px;
   background-color: #f6f6f6;
-  height: 100%;
+  height: 95%;
 }
 
 .close-pop-up-modal-btn {
@@ -1494,7 +1499,9 @@ img {
 
 .image {
   width: 287px;
-  height: 408px;
+  height: 308px;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 8px;
 }
 
@@ -1538,12 +1545,12 @@ img {
   filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15));
 }
 
-.amazon {
-  display: block;
+.fa-brands {
+  font-size: 25px;
 }
 
-.amazonWhite {
-  display: none;
+.fa-amazon {
+  padding-top: 8px;
 }
 
 .buttons {
