--- a/src/sass/partials/_pop-up-modal.scss
+++ b/src/sass/partials/_pop-up-modal.scss
@@ -49,7 +49,7 @@ img {
   border: 2px solid $black1;
   border-radius: 18px;
   background-color: $white1;
-  height: 100%;
+  height: 95%;
 }
 
 .close-pop-up-modal-btn {
@@ -69,7 +69,8 @@ img {
 }
 .image {
   width: 287px;
-  height: 408px;
+  height: 308px;
+  object-fit: cover;
   border-radius: 8px;
 }
 .title {
@@ -106,11 +107,13 @@ img {
 .buy-links-item:hover {
   filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.15));
 }
-.amazon {
-  display: block;
+
+.fa-brands {
+  font-size: 25px;
 }
-.amazonWhite {
-  display: none;
+
+.fa-amazon {
+  padding-top: 8px;
 }
 .buttons {
   position: absolute;
