--- a/src/sass/partials/dark-theme.scss
+++ b/src/sass/partials/dark-theme.scss
@@ -16,6 +16,11 @@ body.dark,
   border: 2px solid $white;
 }
 
+.dark .fa-amazon,
+.dark .fa-apple {
+  color: $white;
+}
+
 .dark .amazonWhite {
   display: block;
 }
